VFS-1735: fixed float right of homepage collapsed menu

--- a/src/http/gui/app/styles/onezone.scss
+++ b/src/http/gui/app/styles/onezone.scss
@@ -663,10 +663,12 @@ $search-box-height: 36px;
 }
 
 // TODO: hacks
-.navbar-nav {
-  margin: 0 !important;
-  float: right !important;
-  .dropdown-menu {
-    position: absolute !important;
+.navbar-onezone {
+  .navbar-nav {
+    margin: 0 !important;
+    float: right !important;
+    .dropdown-menu {
+      position: absolute !important;
+    }
   }
 }
